The callback is only used if SA_RESTART is defined.  Compile it out otherwise to avoid a warning. https://bugs.webkit.org/show_bug.cgi?id=80926

Reviewed by Alexey Proskuryakov.

* heap/MachineStackMarker.cpp:
(JSC):


Canonical link: https://commits.webkit.org/98193@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110617 268f45cc-cd09-0410-ab3c-d52691b4dbfc